Added test for time-dependent Phi

--- a/solvers/IncNavierStokesSolver/CMakeLists.txt
+++ b/solvers/IncNavierStokesSolver/CMakeLists.txt
@@ -125,6 +125,7 @@ IF( NEKTAR_SOLVER_INCNAVIERSTOKES )
     ADD_NEKTAR_TEST(ChanFlow_3DH1D_FlowrateExplicit_MVM)
     ADD_NEKTAR_TEST(PhaseSampling)
     ADD_NEKTAR_TEST(CylFlow2D_SPM)
+    ADD_NEKTAR_TEST(CylFlow2DMov_SPM)
     ADD_NEKTAR_TEST(CylFlow3DH1D_SPM)
     ADD_NEKTAR_TEST(SphFlow3D_SPM)
 
