modification to adjoint FSI

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ RelWithDebInfo MinSizeRel.")
 PROJECT(Nektar++ C CXX)
 
 if(POLICY CMP0074)
-  cmake_policy(SET CMP0074 NEW)
+  cmake_policy(SET CMP0074 OLD)
 endif()
 
 
