--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -448,7 +448,7 @@ dockerhub-build-env:
   <<: *dockerhub_build_template
   stage: build-env-full
   variables:
-    image_name: nektarpp/nektar-env
+    image_name: nektar-env
     dockerfile: docker/nektar-env/Dockerfile
   only:
     refs:
@@ -464,7 +464,7 @@ dockerhub-build-nektar:
   stage: build-and-test
   needs: [ "dockerhub-build-env" ]
   variables:
-    image_name: nektarpp/nektar
+    image_name: nektar
     dockerfile: docker/nektar/Dockerfile
     GIT_SUBMODULE_STRATEGY: normal
 
@@ -474,7 +474,7 @@ dockerhub-build-workbook:
   stage: build-and-test
   needs: [ "dockerhub-build-env" ]
   variables:
-    image_name: nektarpp/nektar-workbook
+    image_name: nektar-workbook
     dockerfile: docker/nektar-workbook/Dockerfile
 
 # nektarpp/nektar-dev image
@@ -483,7 +483,7 @@ dockerhub-build-dev:
   stage: build-env-dev
   needs: [ "dockerhub-build-nektar" ]
   variables:
-    image_name: nektarpp/nektar-dev
+    image_name: nektar-dev
     dockerfile: docker/nektar-dev/Dockerfile
 
 # Test the dockerhub images
@@ -491,7 +491,7 @@ dockerhub-test-nektar:
   <<: *dockerhub_test_template
   needs: [ "dockerhub-build-nektar" ]
   variables:
-    image_name: nektarpp/nektar
+    image_name: nektar
   script:
     - mpirun -n 3 IncNavierStokesSolver $CI_PROJECT_DIR/solvers/IncNavierStokesSolver/Tests/ChanFlow_m3_par.xml
 
@@ -499,7 +499,7 @@ dockerhub-test-nektar-dev:
   <<: *dockerhub_test_template
   needs: [ "dockerhub-build-dev" ]
   variables:
-    image_name: nektarpp/nektar-dev
+    image_name: nektar-dev
   script:
     - cd $CI_PROJECT_DIR/templates/executable
     - ./test.sh /usr/local/lib64/nektar++/cmake 3
@@ -509,6 +509,7 @@ dockerhub-deploy:
   stage: dockerhub-deploy
   only:
     - master
+      - /^docker\/.*$/
     - tags
   variables:
     images: nektar nektar-dev nektar-workbook nektar-env
@@ -517,6 +518,6 @@ dockerhub-deploy:
     - for image in ${images}; do docker pull ${image}:$CI_COMMIT_SHORT_SHA; done
     - docker logout
     - docker login -u "$DOCKERIO_REGISTRY_USER" -p "$DOCKERIO_REGISTRY_PASSWORD" $DOCKERIO_REGISTRY
-    - if [ ! -z $CI_COMMIT_TAG ]; then for image in ${images}; docker tag ${image} ${image}:$CI_COMMIT_TAG; docker push ${image}:$CI_COMMIT_TAG; done; fi
-    - for image in ${images}; do docker push ${image}:$CI_COMMIT_SHORT_SHA; done
-    - for image in ${images}; do docker push ${image}:latest; done
+    - if [ ! -z $CI_COMMIT_TAG ]; then for image in ${images}; docker tag ${image}:$CI_COMMIT_SHORT_SHA ${DOCKERIO_REGISTRY}/nektarpp/${image}:$CI_COMMIT_TAG; docker push nektarpp/${image}:$CI_COMMIT_TAG; done; fi
+    - for image in ${images}; do docker tag ${image}:$CI_COMMIT_SHORT_SHA ${DOCKERIO_REGISTRY}/nektarpp/${image}:$CI_COMMIT_SHORT_SHA; docker push nektarpp/${image}:$CI_COMMIT_SHORT_SHA; done
+    - for image in ${images}; do docker tag ${image}:$CI_COMMIT_SHORT_SHA ${DOCKERIO_REGISTRY}/nektarpp/${image}:latest; docker push nektarpp/${image}:latest; done
