--- a/docker/nektar-dev/Dockerfile
+++ b/docker/nektar-dev/Dockerfile
@@ -1,13 +1,14 @@
+ARG NEKTAR_IMAGE=nektarpp/nektar:latest
 ARG ENV_IMAGE=nektarpp/nektar-env:latest
+FROM $NEKTAR_IMAGE as nektar
 FROM $ENV_IMAGE AS build
 
 LABEL maintainer="Nektar++ Development Team <nektar-users@imperial.ac.uk>"
 
 ARG INSTALL_PREFIX=/usr/local
-ARG NEKTAR_IMAGE=nektarpp/nektar:latest
 
 USER root
-COPY --from=${NEKTAR_IMAGE} ${INSTALL_PREFIX} ${INSTALL_PREFIX}
+COPY --from=nektar ${INSTALL_PREFIX} ${INSTALL_PREFIX}
 
 # Set up entrypoint for copying test files.
 COPY docker/nektar/docker-entrypoint.sh /usr/local/bin/docker-entrypoint.sh
