Add missing docker image

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -508,6 +508,7 @@ dockerhub-test-nektar-dev:
 
 # Deployment
 dockerhub-deploy:
+  image: docker:stable
   stage: dockerhub-deploy
   only:
     - master
