--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -445,6 +445,24 @@ win10-default-build-and-test:
     - /^docker\/.*$/
     - tags
 
+.dockerhub-deploy-template: &dockerhub_deploy_template
+  image: docker:stable
+  stage: dockerhub-deploy
+  only:
+    - master
+    - /^docker\/.*$/
+    - tags
+  script:
+    - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
+    - CI_IMAGE=$CI_REGISTRY_IMAGE/${image_name}:$CI_COMMIT_SHORT_SHA
+    - DH_IMAGE=${DOCKERIO_REGISTRY}/nektarpp/${image_name}
+    - docker pull $CI_IMAGE
+    - docker logout
+    - docker login -u "$DOCKERIO_REGISTRY_USER" -p "$DOCKERIO_REGISTRY_PASSWORD" $DOCKERIO_REGISTRY
+    - if [ ! -z $CI_COMMIT_TAG ]; then docker tag $CI_IMAGE $DH_IMAGE:$CI_COMMIT_TAG; docker push $DH_IMAGE:$CI_COMMIT_TAG; fi
+    - docker tag $CI_IMAGE ${DH_IMAGE}:$CI_COMMIT_SHORT_SHA; docker push ${DH_IMAGE}:$CI_COMMIT_SHORT_SHA
+    - docker tag $CI_IMAGE ${DH_IMAGE}:latest; docker push ${DH_IMAGE}:latest; done
+
 # nektarpp/nektar-env image
 dockerhub-build-env:
   <<: *dockerhub_build_template
@@ -507,20 +525,19 @@ dockerhub-test-nektar-dev:
     - ./test.sh /usr/local/lib64/nektar++/cmake 3
 
 # Deployment
-dockerhub-deploy:
-  image: docker:stable
-  stage: dockerhub-deploy
-  only:
-    - master
-    - /^docker\/.*$/
-    - tags
+dockerhub-deploy-nektar:
+  <<: *dockerhub_deploy_template
   variables:
-    images: nektar nektar-dev nektar-workbook nektar-env
-  script:
-    - docker login -u "$CI_REGISTRY_USER" -p "$CI_REGISTRY_PASSWORD" $CI_REGISTRY
-    - for image in ${images}; do docker pull $CI_REGISTRY_IMAGE/${image}:$CI_COMMIT_SHORT_SHA; done
-    - docker logout
-    - docker login -u "$DOCKERIO_REGISTRY_USER" -p "$DOCKERIO_REGISTRY_PASSWORD" $DOCKERIO_REGISTRY
-    - if [ ! -z $CI_COMMIT_TAG ]; then for image in ${images}; do docker tag $CI_REGISTRY_IMAGE/${image}:$CI_COMMIT_SHORT_SHA ${DOCKERIO_REGISTRY}/nektarpp/${image}:$CI_COMMIT_TAG; docker push nektarpp/${image}:$CI_COMMIT_TAG; done; fi
-    - for image in ${images}; do docker tag $CI_REGISTRY_IMAGE/${image}:$CI_COMMIT_SHORT_SHA ${DOCKERIO_REGISTRY}/nektarpp/${image}:$CI_COMMIT_SHORT_SHA; docker push nektarpp/${image}:$CI_COMMIT_SHORT_SHA; done
-    - for image in ${images}; do docker tag $CI_REGISTRY_IMAGE/${image}:$CI_COMMIT_SHORT_SHA ${DOCKERIO_REGISTRY}/nektarpp/${image}:latest; docker push nektarpp/${image}:latest; done
+    image_name: nektar
+dockerhub-deploy-nektar-env:
+  <<: *dockerhub_deploy_template
+  variables:
+    image_name: nektar-env
+dockerhub-deploy-nektar-dev:
+  <<: *dockerhub_deploy_template
+  variables:
+    image_name: nektar-dev
+dockerhub-deploy-nektar-workbook:
+  <<: *dockerhub_deploy_template
+  variables:
+    image_name: nektar-workbook
