--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -276,6 +276,13 @@ tutorials-build:
   <<: *build-env-ubuntu-template-default
   stage: build-env-full
 
+focal-default-build-env:
+  <<: *build-env-ubuntu-template-default
+
+focal-full-build-env:
+  <<: *build-env-ubuntu-template-full
+  needs: ["focal-default-build-env"]
+
 bionic-default-build-env:
   <<: *build-env-ubuntu-template-default
 
@@ -290,13 +297,14 @@ xenial-full-build-env:
   <<: *build-env-ubuntu-template-full
   needs: ["xenial-default-build-env"]
 
-trusty-default-build-env:
-  <<: *build-env-ubuntu-template-default
 
-trusty-full-build-env:
-  <<: *build-env-ubuntu-template-full
-  needs: ["trusty-default-build-env"]
+focal-default-build-and-test:
+  <<: *build-and-test-template
+  needs: ["focal-default-build-env"]
 
+focal-full-build-and-test:
+  <<: *build-and-test-template
+  needs: ["focal-full-build-env"]
 
 bionic-default-build-and-test:
   <<: *build-and-test-template
@@ -314,16 +322,16 @@ xenial-full-build-and-test:
   <<: *build-and-test-template
   needs: ["xenial-full-build-env"]
 
-trusty-default-build-and-test:
-  <<: *build-and-test-template
-  needs: ["trusty-default-build-env"]
-
-trusty-full-build-and-test:
-  <<: *build-and-test-template
-  needs: ["trusty-full-build-env"]
-
 
 # COMPILER WARNINGS
+focal-default-warnings:
+  <<: *compiler-warning-template
+  needs: ["focal-default-build-and-test"]
+
+focal-full-warnings:
+  <<: *compiler-warning-template
+  needs: ["focal-full-build-and-test"]
+
 bionic-default-warnings:
   <<: *compiler-warning-template
   needs: ["bionic-default-build-and-test"]
@@ -339,14 +347,6 @@ xenial-default-warnings:
 xenial-full-warnings:
   <<: *compiler-warning-template
   needs: ["xenial-full-build-and-test"]
-
-trusty-default-warnings:
-  <<: *compiler-warning-template
-  needs: ["trusty-default-build-and-test"]
-
-trusty-full-warnings:
-  <<: *compiler-warning-template
-  needs: ["trusty-full-build-and-test"]
 
 
 ################################################
