Revert "Disabled automatic file backup for solvers and FieldConvert"
This reverts commit dc47b7eae584e08743cee7dcd9e9480e3c3595d6.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -199,10 +199,10 @@ IF (NEKTAR_USE_THREAD_SAFETY)
     ADD_DEFINITIONS(-DNEKTAR_USE_THREAD_SAFETY)
 ENDIF()
 
-# Enable backups
-OPTION(NEKTAR_ENABLE_BACKUPS "Enable automatic backup file creation" OFF)
-IF (NEKTAR_ENABLE_BACKUPS)
-    ADD_DEFINITIONS(-DNEKTAR_ENABLE_BACKUPS)
+# Disable backups
+OPTION(NEKTAR_DISABLE_BACKUPS "Disable automatic backup file creation" OFF)
+IF (NEKTAR_DISABLE_BACKUPS)
+    ADD_DEFINITIONS(-DNEKTAR_DISABLE_BACKUPS)
 ENDIF()
 
 IF (MSVC)
