Introduce environment variable support to toggle NEKTAR_DISABLE_BACKUPS

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -200,7 +200,21 @@ IF (NEKTAR_USE_THREAD_SAFETY)
 ENDIF()
 
 # Disable backups
-OPTION(NEKTAR_DISABLE_BACKUPS "Disable automatic backup file creation" OFF)
+IF(DEFINED ENV{NEKTAR_DISABLE_BACKUPS})
+    IF($ENV{NEKTAR_DISABLE_BACKUPS} MATCHES "ON")
+        SET(DEFAULT_NEKTAR_DISABLE_BACKUPS ON)
+    ELSE()
+        SET(DEFAULT_NEKTAR_DISABLE_BACKUPS OFF)
+    ENDIF()
+ELSE()
+    IF(CMAKE_BUILD_TYPE STREQUAL "Debug")
+        SET(DEFAULT_NEKTAR_DISABLE_BACKUPS ON)
+    ELSE()
+        SET(DEFAULT_NEKTAR_DISABLE_BACKUPS OFF)
+    ENDIF()
+ENDIF()
+OPTION(NEKTAR_DISABLE_BACKUPS "Disable automatic backup file creation" 
+    ${DEFAULT_NEKTAR_DISABLE_BACKUPS})
 IF (NEKTAR_DISABLE_BACKUPS)
     ADD_DEFINITIONS(-DNEKTAR_DISABLE_BACKUPS)
 ENDIF()
