--- a/solvers/CMakeLists.txt
+++ b/solvers/CMakeLists.txt
@@ -5,6 +5,20 @@ MACRO(SOLVER_COMPONENT_NAME name var)
     STRING(REPLACE "solver" "-solver" ${var} ${${var}})
 ENDMACRO()
 
+MACRO(ADD_SOLVER_PLUGIN name)
+    CMAKE_PARSE_ARGUMENTS(SOLVERPLUGIN "" "" "SOURCES" ${ARGN})
+
+    ADD_LIBRARY(${name}-plugin SHARED ${SOLVERPLUGIN_SOURCES})
+    TARGET_LINK_LIBRARIES(${name}-plugin LINK_PUBLIC SolverUtils)
+
+    # Set output name to always be, e.g. libADRSolver.so
+    SET_TARGET_PROPERTIES(${name}-plugin PROPERTIES OUTPUT_NAME ${name})
+    SET_TARGET_PROPERTIES(${name}-plugin PROPERTIES PREFIX "lib")
+    SET_TARGET_PROPERTIES(${name}-plugin PROPERTIES SUFFIX ".so")
+
+    INSTALL(TARGETS ${name}-plugin DESTINATION ${NEKTAR_SOLVER_PLUGIN_DIR})
+ENDMACRO()
+
 MACRO(ADD_SOLVER_EXECUTABLE name)
     CMAKE_PARSE_ARGUMENTS(SOLVER "" "COMPONENT" "SOURCES;LIBRARY_SOURCES" ${ARGN})
 
