Initial attempt for creating shared library for EquationSystems in solver

--- a/solvers/ADRSolver/CMakeLists.txt
+++ b/solvers/ADRSolver/CMakeLists.txt
@@ -6,23 +6,11 @@ IF (NOT NEKTAR_BUILD_SOLVERS)
     SET(NEKTAR_SOLVER_ADR OFF CACHE INTERNAL "")
 ENDIF()
 
+SUBDIRS(EquationSystems)
+
 IF( NEKTAR_SOLVER_ADR )
-    ADD_SOLVER_EXECUTABLE(ADRSolver SOURCES
-        ./ADRSolver.cpp
-        ./EquationSystems/Helmholtz.cpp
-        ./EquationSystems/Laplace.cpp
-        ./EquationSystems/Poisson.cpp
-        ./EquationSystems/Projection.cpp
-        ./EquationSystems/SteadyAdvectionDiffusion.cpp
-        ./EquationSystems/SteadyAdvectionDiffusionReaction.cpp
-        ./EquationSystems/UnsteadyAdvection.cpp
-        ./EquationSystems/MMFAdvection.cpp
-        ./EquationSystems/UnsteadyDiffusion.cpp
-        ./EquationSystems/UnsteadyAdvectionDiffusion.cpp
-        ./EquationSystems/UnsteadyInviscidBurger.cpp
-        ./EquationSystems/UnsteadyReactionDiffusion.cpp
-        ./EquationSystems/UnsteadyViscousBurgers.cpp
-        ./EquationSystems/EigenValuesAdvection.cpp)
+    ADD_SOLVER_EXECUTABLE(ADRSolver SOURCES ./ADRSolver.cpp)
+    TARGET_LINK_LIBRARIES(ADRSolver PUBLIC ADRSolverEquationSystems)
 
     #MMF advection
     ADD_NEKTAR_TEST        (TestMMFAdvPlane)
