--- a/solvers/ADRSolver/EquationSystems/CMakeLists.txt
+++ b/solvers/ADRSolver/EquationSystems/CMakeLists.txt
@@ -33,7 +33,7 @@ SET(ADR_SOLVER_EQUATION_SYSTEMS_HEADERS
 )
 
 
-ADD_LIBRARY(ADRSolverEquationSystems ${ADR_SOLVER_EQUATION_SYSTEMS_SOURCES})
+ADD_LIBRARY(ADRSolverEquationSystems SHARED ${ADR_SOLVER_EQUATION_SYSTEMS_SOURCES})
 ADD_DEPENDENCIES(ADRSolverEquationSystems SolverUtils SpatialDomains)
 
 TARGET_LINK_LIBRARIES(ADRSolverEquationSystems
