--- a/solvers/VortexWaveInteraction/CMakeLists.txt
+++ b/solvers/VortexWaveInteraction/CMakeLists.txt
@@ -10,8 +10,8 @@ IF( NEKTAR_SOLVER_VORTEXWAVE )
     SET(VortexWaveInteractionSolverSource
        ../ADRSolver/EquationSystems/SteadyAdvectionDiffusion.cpp
        ../ADRSolver/EquationSystems/SteadyAdvectionDiffusionReaction.cpp
-       ./VortexWaveInteraction.cpp 
-       ./VortexWaveInteractionSolver.cpp 
+       ./VortexWaveInteraction.cpp
+       ./VortexWaveInteractionSolver.cpp
        $<TARGET_OBJECTS:IncNavierStokesSolver-obj>
        )
 
@@ -19,7 +19,7 @@ IF( NEKTAR_SOLVER_VORTEXWAVE )
        ../ADRSolver/EquationSystems/SteadyAdvectionDiffusion.cpp
        ../ADRSolver/EquationSystems/SteadyAdvectionDiffusionReaction.cpp
        ./CalcL2ToLinfPressure.cpp
-       ./VortexWaveInteraction.cpp 
+       ./VortexWaveInteraction.cpp
        $<TARGET_OBJECTS:IncNavierStokesSolver-obj>
        )
 
@@ -27,7 +27,7 @@ IF( NEKTAR_SOLVER_VORTEXWAVE )
        ../ADRSolver/EquationSystems/SteadyAdvectionDiffusion.cpp
        ../ADRSolver/EquationSystems/SteadyAdvectionDiffusionReaction.cpp
        ./CalcVWIplusPressure.cpp
-       ./VortexWaveInteraction.cpp 
+       ./VortexWaveInteraction.cpp
        $<TARGET_OBJECTS:IncNavierStokesSolver-obj>
        )
 
@@ -35,8 +35,14 @@ IF( NEKTAR_SOLVER_VORTEXWAVE )
 
     ADD_SOLVER_EXECUTABLE(VortexWaveInteractionSolver SOURCES
 	${VortexWaveInteractionSolverSource})
+    TARGET_LINK_LIBRARIES(VortexWaveInteractionSolver PUBLIC SolverUtils)
+    TARGET_LINK_LIBRARIES(VortexWaveInteractionSolver PUBLIC ADRSolver-plugin)
     ADD_SOLVER_UTILITY(CalcL2ToLinfPressure VortexWaveInteractionSolver SOURCES
 	${CalcL2ToLinfPressureSource})
+    TARGET_LINK_LIBRARIES(CalcL2ToLinfPressure PUBLIC SolverUtils)
+    TARGET_LINK_LIBRARIES(CalcL2ToLinfPressure PUBLIC ADRSolver-plugin)
     ADD_SOLVER_UTILITY(CalcVWIplusPressure VortexWaveInteractionSolver SOURCES
 	${CalcVWIplusPressureSource})
+    TARGET_LINK_LIBRARIES(CalcVWIplusPressure PUBLIC SolverUtils)
+    TARGET_LINK_LIBRARIES(CalcVWIplusPressure PUBLIC ADRSolver-plugin)
 ENDIF( NEKTAR_SOLVER_VORTEXWAVE )
